fixed scroll on mobile

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -420,6 +420,28 @@ li>a{
         border: 0.2rem solid rgba(0,173,181,255);
     }
 
+    @keyframes blinking {
+        0% {
+        
+        }
+        50% {
+            font-size: 2rem;
+            background-color: rgba(57,62,70,255);
+            border: 0.8rem solid rgba(0,173,181,255);
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
+            padding: 4px 26px;
+        }
+        100% {
+            font-size: 1rem;
+            background-color: rgba(57,62,70,255);
+            padding: 1px 8px;
+        }
+      }
+      
+      #cart-count {
+        animation: blinking 0.4s 1;
+      }
+
     
 }
 
